--- a/about-us.html
+++ b/about-us.html
@@ -90,7 +90,7 @@
 <div class="row">
 
 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 logo_side align-self-center">
-<a href="./" title="NDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="NDYGREEN TECHNOLOGIES" title="NDYGREEN TECHNOLOGIES" class="w-100"></a>
+<a href="./" title="INDYGREEN TECHNOLOGIES"><img src="img/logo.png" alt="INDYGREEN TECHNOLOGIES" title="INDYGREEN TECHNOLOGIES" class="w-100"></a>
 </div>
 
 <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-xs-12 nave_side align-self-center">
