--- a/index.html
+++ b/index.html
@@ -380,7 +380,8 @@ Your browser does not support the video tag.
 <!-- tag-line-marqies -->
 <div class="tag-line-marquee align-self-center pt-1 pb-1">
 <marquee attribute_name="attribute_value"....more attributes scrollamount="15">
-<span class="text-white mb-0 d-block text capitalize font-weight-bold">Turnkey Solutions Provider For Solar Pv Production Lines, Solar Pv Raw Materials, Lithium Battery Pack Assembly Lines, Electric Charging Stations & Hydrogen Production Lines</span>
+<span class="text-white mb-0 d-block text capitalize font-weight-bold">Turnkey Solutions for Solar PV Production Lines, PV Raw Materials, Lithium Battery Assembly Lines, EV Charging Stations, and Green Hydrogen Production Facilities
+</span>
 </marquee>
 </div>
 
