--- a/career.html
+++ b/career.html
@@ -216,7 +216,7 @@
 </div>
 </section>
 <!-- ttm-page-title-row -->
-<section class="ttm-page-title-row" style="background: url(img/career-breadcumb.jpg)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/career-breadcumb.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
