--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Pack Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Spot Welding machines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding machines</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="#" title="Lithium Cell Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
@@ -144,7 +144,7 @@
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Pack Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Spot Welding machines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding machines</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Packs Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Testers
@@ -225,7 +225,7 @@
 <li><a href="#">Turnkey Assembly Line</a></li>
 <li><a href="#">Cell Testers</a></li>
 <li><a href="#">Sorting Machine</a></li>
-<li><a href="#">Spot Welding machines</a></li>
+<li><a href="#">Welding machines</a></li>
 </ul>
 </li>
 <!-- Two -->
