--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 <li><a href="#">Turnkey Assembly Line</a></li>
 <li><a href="#">Cell Testers</a></li>
 <li><a href="#">Sorting Machine</a></li>
-<li><a href="#">Spot Welding machines</a></li>
+<li><a href="#">Welding machines</a></li>
 </ul>
 </li>
 
