--- a/about-us.html
+++ b/about-us.html
@@ -101,56 +101,64 @@
 <ul class="navbar-nav">
 <li class="nav-item mr-0"><a href="index.html" title="Home" class="nav-link active">Home </a></li>
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link">Business Units</a>
+<li class="nav-item mr-0"><a href="#" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a>
+<li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel production Turnkey Line</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Lines</a></li>
-<li class="nav-item mr-0"><a href="solar-pv-raw-materials.html" title="Solar PV Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV Raw Materials</a></li>
-<li class="nav-item mr-0"><a href="solar-epc-components.html" title="Solar EPC Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC Components</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Automation</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Stringer</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar PV Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laminator</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar EPC Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sun Simulator</a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Mobility </a>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability turnkey LAB</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar cell production Line</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw materials</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Production Lines</a></li>
-<li class="nav-item mr-0"><a href="lithium-battery-pack-production-lines.html" title="Lithium Battery Pack Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Pack Production Lines</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Separator Production Lines</a></li>
-<li class="nav-item mr-0"><a href="lithium-battery-raw-material-components.html" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Raw Material Components</a></li>
-<li class="nav-item mr-0"><a href="electric-charging-stations.html" title="Electric Charging stations" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electric Charging stations</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Aluminum Frames</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cells</a></li>
+</ul>
+</li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC components </a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Hydrogen Mobility </a>
+<li class="nav-item mr-0"><a href="#" class="nav-link"> Lithium Batteries</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fuel Cell Production Lines </a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyser Production Lines</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Hydrogen Generators</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Green Hydrogen</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
+<li class="nav-item mr-0"><a href="#" title="Lithium Battery Pack Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
+<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding machines</a></li>
 </ul>
 </li>
-
+<li class="nav-item mr-0"><a href="#" title="Lithium Cell Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
+<li class="nav-item mr-0"><a href="#" title="Lithium Battery Pack Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
+<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding machines</a></li>
 </ul>
 </li>
-
-<li class="nav-item mr-0"><a href="#" class="nav-link">Consulting Services  </a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV Manufacturing</a></li>
-<li class="nav-item mr-0"><a href="lithium-cell-manufacturing.html" title="Lithium Cell Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Manufacturing</a></li>
-<li class="nav-item mr-0"><a href="lithium-battery-packs-manufacturing.html" title="Lithium Battery Packs Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Packs Manufacturing
+<li class="nav-item mr-0"><a href="#" title="Lithium Battery Packs Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Testers
+</a></li>
+<li class="nav-item mr-0"><a href="#" title="Lithium Battery Packs Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
+</a></li>
+<li class="nav-item mr-0"><a href="#" title="Lithium Battery Packs Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines 
 </a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
+<!--<li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="solar-panels.html" title="Solar Panels" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
 <li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
-</li>
-
+</li>-->
+<li class="nav-item mr-0"><a href="#" title="Career" class="nav-link">Blogs  </a></li>
 <li class="nav-item mr-0"><a href="career.html" title="Career" class="nav-link">Career  </a></li>
 <li class="nav-item mr-0"><a href="contact-us.html" title="Contact Us" class="nav-link">Contact Us</a></li>
 </ul>                            
@@ -166,39 +174,36 @@
 <li><a href="index.html" title="Home">Home</a></li>
 <li><a href="about-us.html" title="About Us">About Us</a></li>
 
-<li><a href="javascript:void(0)" title="Business Units">Business Units</a>
+<li><a href="javascript:void(0)" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="#"> Solar PV</a>
+<a href="#">Solar Panel production Turnkey Line</a>
 <ul>
-<li><a href="#">Solar Cell Production Lines</a></li>
-<li><a href="#">Solar Panel Production Lines</a></li>
-<li><a href="solar-pv-raw-materials.html" title="Solar PV Raw Materials">Solar PV Raw Materials</a></li>
-<li><a href="solar-epc-components.html" title="Solar EPC Components">Solar EPC Components</a></li>
+<li><a href="#">Turnkey Automation</a></li>
+<li><a href="#">Stringer</a></li>
+<li><a href="#">Laminator</a></li>
+<li><a href="#">Sun Simulator</a></li>
 </ul>
 </li>
 <!-- Two -->
 <li>
-<a href="#"> E-Mobility</a>
+<a href="#">PV Reliability turnkey LAB</a>
+</li>
+<li>
+<a href="#">Solar cell production Line</a>
+</li>
+<li>
+<a href="#">Raw materials</a>
 <ul>
-<li><a href="#"> Lithium Cell Production Lines</a></li>
-<li><a href="#"> Lithium Battery Pack Production Lines</a></li>
-<li><a href="#"> Lithium Battery Separator Production Lines</a></li>
-<li><a href="#"> Lithium Battery Raw Material Components</a></li>
-<li><a href="#"> Electric Charging stations</a></li>
+<li><a href="#">Aluminum Frames</a></li>
+<li><a href="#">Solar Cells</a></li>
 </ul>
+</li>
+<li>
+<a href="#">Solar EPC components </a>
 </li>
 
 <!-- Three -->
-<li>
-<a href="#"> Hydrogen Mobility</a>
-<ul>
-<li><a href="#"> Fuel Cell Production Lines </a></li>
-<li><a href="#"> Electrolyser Production Lines</a></li>
-<li><a href="#"> Hydrogen Generators</a></li>
-<li><a href="#"> Green Hydrogen</a></li>
-</ul>
-</li>
 
 <li>
 </li>
@@ -207,34 +212,36 @@
 
 
 
-
-<li><a href="javascript:void(0)" title="Consulting Services">Consulting Services  </a>
+<li><a href="javascript:void(0)" title="Business Units">Lithium Batteries</a>
 <ul>
-<li><a href="#"> Solar PV Manufacturing</a></li>
+<li>
+<a href="#">For Cylindrical Batteries</a>
+<ul>
+<li><a href="#">Turnkey Assembly Line</a></li>
+<li><a href="#">Cell Testers</a></li>
+<li><a href="#">Sorting Machine</a></li>
+<li><a href="#">Welding machines</a></li>
+</ul>
+</li>
 <!-- Two -->
-<li><a href="lithium-cell-manufacturing.html" title="Lithium Cell Manufacturing"> Lithium Cell Manufacturing</a></li>
-<!-- Three -->
-<li><a href="lithium-battery-packs-manufacturing.html"> Lithium Battery Packs Manufacturing</a></li>
 <li>
-</li>
-</ul>
-</li>
-
-
-<li><a href="javascript:void(0)" title="OEM Services">OEM Services </a>
+<a href="#">For Prismatic Batteries</a>
 <ul>
-<li><a href="solar-panels.html" title="Solar Panels">  Solar Panels</a></li>
-<!-- Two -->
-<li><a href="lithium-batteries.html" title="Lithium Batteries"> Lithium Batteries</a></li>
-<!-- Three -->
-<li><a href="#"> E-Charging stations</a></li>
-<li>
-</li>
+<li><a href="#">Turnkey Assembly Line</a></li>
+<li><a href="#">Cell Testers</a></li>
+<li><a href="#">Sorting Machine</a></li>
+<li><a href="#">Welding machines</a></li>
 </ul>
 </li>
 
+<!-- Three -->
+<li><a href="#">BMS Testers</a></li>
+<li><a href="#">Battery Pack Testers</a></li>
+<li><a href="#">Other Machines</a></li>
 
-
+</ul>
+</li>
+<li><a href="#" title="Blogs">Blogs</a></li>
 <li><a href="career.html" title="Career">Career</a></li>
 <li><a href="contact-us.html" title="Contact Us">Contact Us</a></li>
 </ul>
@@ -395,7 +402,7 @@ Balancing her professional and personal life with ease, Harleen is also a mother
 </section>
 
 
-<!-- Footer -->
+  <!-- Footer -->
 <footer class="py-4">
 <div class="container">
 <div class="row">
@@ -421,9 +428,8 @@ Balancing her professional and personal life with ease, Harleen is also a mother
   
     <h6><span class="font-italic font-weight-bold">Category Links</span></h6>
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Business Units</a></li>
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Consulting Services</a></li>
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> OEM Services</a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
 
 
 
@@ -439,13 +445,13 @@ Balancing her professional and personal life with ease, Harleen is also a mother
   <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 quick_links">
   <h6><span class="font-italic font-weight-bold">Product Links</span></h6>
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="solar-pv-raw-materials.html" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV Raw Materials</a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV Raw Materials</a></li>
 
-  <li class="border-bottom"><a href="solar-epc-components.html" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC Components</a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC Components</a></li>
 
-  <li class="border-bottom"><a href="lithium-battery-pack-production-lines.html" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Lithium Battery Pack Production Lines</a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Lithium Battery Pack Production Lines</a></li>
 
-  <li class="border-bottom"><a href="lithium-battery-raw-material-components.html" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Raw Material Components</a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Raw Material Components</a></li>
 
   <li class="border-bottom"><a href="solar-panels.html" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Panels</a></li>
   <li class="border-bottom"><a href="lithium-batteries.html" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
