--- a/lithium-battery-pack-production-lines.html
+++ b/lithium-battery-pack-production-lines.html
@@ -227,7 +227,7 @@
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
-<a title="Homepage" href="./" class="text-white"><i class="ti ti-home"></i>Home</a>
+<a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
 <span class="text-white"> Business Units</span>
