--- a/solar-panel-production-turnkey-line.html
+++ b/solar-panel-production-turnkey-line.html
@@ -261,140 +261,109 @@
 </div>
 </section>
 <!--  -->
-<!-- ttm-page-title-row -->
-<section class="ttm-page-title-row" style="background: url(img/career-breadcumb.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Career</h1>
+<h1 class="title text-white">SOLAR PANEL PRODUCTION TURNKEY LINE</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Career</span>
+<a title="Homepage" href="solar.html" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
+</span>
+<span class="ttm-bread-sep text-white">/</span>
+<span class="text-white">Solar Panel Production Turnkey Line</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
 </div><!-- /.row -->  
 </div><!-- /.container -->                      
 </section>
-<!-- career -->
-<section class="career py-5 bg-light">
-<div class="container">
-<div class="row">
-<p>Dedicated & Smart Human Resource is strength of any organization. In order to achieve our aggressive goals, we continuously look forward to expand our team with people who have fire in their belly & zeal to excel. If you are the one, we have following openings at the moment :</p>
-</div>
-</div>
-</section>
-<!-- current-and-opening -->
-<!-- <section class="current-and-opening py-5">
-<div class="container">
-<div class="row">
+<!-- About Us -->
+ 
+<div class="container py-5">
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel">
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Turnkey Automation</h5>
+            <p class="card-text text-muted">Complete turnkey automation solutions for efficient industrial processes.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 jobs-profile border-right">
-<span>Current</span>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-</div>
+    <!-- Card 2 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <img src="img/DEMO.png" class="card-img-top product-img" alt="PV Lab">
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Stringer</h5>
+            <p class="card-text text-muted">Advanced stringer equipment for automated PV manufacturing.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 jobs-profile">
-<span>Opening</span>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-</div>
-
-</div>
-</div>
-</section> -->
-
-<!-- Job Post -->
-<section class="job-post py-5">
-<div class="container">
-<div class="row">
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-1.jpeg">
-  <img src="img/post-1.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-2.jpeg">
-  <img src="img/post-2.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-3.jpeg">
-  <img src="img/post-3.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 post-div">
-<a data-fancybox="video-gallery" data-src="img/post-4.jpeg">
-  <img src="img/post-4.jpeg"/ class="w-100 border p-2">
-</a>
-</div>
-
-</div>
-</div>
-</section>
-
-<section class="form-career bg-light">
-<div class="container">
-<div class="main-title">
-<p>Apply Now</p>
-<div class="separator"></div>
-</div>
-<div class="row">
-<div class="form-item">
-<form name="mailfrm" action="mailer/contact.php" method="post" enctype="multipart/form-data">
-<div class="row">
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="text" name="name" class="name"  placeholder="Name">
+    <!-- Card 3 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Cell">
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Laminator</h5>
+            <p class="card-text text-muted">Optimized laminators for durable and high-quality solar panels.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="email" name="email" class="email"  placeholder="Email">
-</div>
-
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="text" name="phone" class="phone"  placeholder="Phone">
-</div>
-
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="file" name="image"  class="" aria-invalid="false">
-</div>
-
-<!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">-->
-<!--<select class="select-img">-->
-<!--<option value="Select Job">Select Job</option>-->
-<!--<option value="Job Title">Job Title</option>-->
-<!--<option value="Job Title">Job Title</option>-->
-<!--<option value="Job Title">Job Title</option>-->
-
-<!--</select>-->
-<!--</div>-->
-
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 career-filed">
-<input type="text" name="address"  class=""   placeholder="Address" aria-invalid="false">
-</div>
+<div class="container py-5">
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel">
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Sun Simulator</h5>
+            <p class="card-text text-muted">Reliable sun simulator for solar module quality testing.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 career-filed-textarea">
-<textarea name="message" type="text" class="message pt-3" placeholder="Message" required=""></textarea>
+    <!-- Card 3 -->
+  </div>
 </div>
-
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 career-filed-btn text-center">
-<input type="submit" name="submit">
-</div>
-</div>
-</form>
-</div>
-</div>
-</div>
-</section>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
