--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Indygreen Technologies offers turnkey GW-scale Solar PV panel production lines, lithium cell & battery pack production lines, electric charging infrastructure, and hydrogen mobility solutions in India." />
 
   <!-- Meta Keywords -->
-  <meta name="keywords" content="solar PV production lines, lithium cell production lines, lithium battery pack production, electric charging stations, hydrogen production lines, green hydrogen, turnkey solar manufacturing, Indygreentech India" />
+  <meta name="keywords" content="solar PV production lines, lithium Cell Production lines, lithium battery pack production, electric charging stations, hydrogen production lines, green hydrogen, turnkey solar manufacturing, Indygreentech India" />
 
   <!-- Robots Tag -->
   <meta name="robots" content="index, follow" />
@@ -106,9 +106,9 @@
 <ul class="navbar-nav">
 <li class="nav-item mr-0"><a href="index.html" title="Home" class="nav-link active">Home </a></li>
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link">Solar PV</a>
+<li class="nav-item mr-0"><a href="solar.html" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel production Turnkey Line</a>
+<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Turnkey Line</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Automation</a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Stringer</a></li>
@@ -117,9 +117,9 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability turnkey LAB</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar cell production Line</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw materials</a>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability turnkey Lab</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Line</a></li>
+<li class="nav-item mr-0"><a href="raw-materials.html" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Aluminum Frames</a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cells</a></li>
@@ -129,22 +129,22 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" class="nav-link"> Lithium Batteries</a>
+<li class="nav-item mr-0"><a href="lithium-batteries-1.html" class="nav-link"> Lithium Batteries</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
+<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Pack Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding machines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="#" title="Lithium Cell Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Lithium Cell Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Pack Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding machines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Packs Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Testers
@@ -179,10 +179,10 @@
 <li><a href="index.html" title="Home">Home</a></li>
 <li><a href="about-us.html" title="About Us">About Us</a></li>
 
-<li><a href="javascript:void(0)" title="Business Units">Solar PV</a>
+<li><a href="solar.html" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="#">Solar Panel production Turnkey Line</a>
+<a href="#">Solar Panel Production Turnkey Line</a>
 <ul>
 <li><a href="#">Turnkey Automation</a></li>
 <li><a href="#">Stringer</a></li>
@@ -192,10 +192,10 @@
 </li>
 <!-- Two -->
 <li>
-<a href="#">PV Reliability turnkey LAB</a>
+<a href="#">PV Reliability turnkey Lab</a>
 </li>
 <li>
-<a href="#">Solar cell production Line</a>
+<a href="#">Solar Cell Production Line</a>
 </li>
 <li>
 <a href="#">Raw materials</a>
@@ -217,7 +217,7 @@
 
 
 
-<li><a href="javascript:void(0)" title="Business Units">Lithium Batteries</a>
+<li><a href="lithium-batteries-1.html" title="Business Units">Lithium Batteries</a>
 <ul>
 <li>
 <a href="#">For Cylindrical Batteries</a>
@@ -225,7 +225,7 @@
 <li><a href="#">Turnkey Assembly Line</a></li>
 <li><a href="#">Cell Testers</a></li>
 <li><a href="#">Sorting Machine</a></li>
-<li><a href="#">Welding machines</a></li>
+<li><a href="#">Welding Machines</a></li>
 </ul>
 </li>
 <!-- Two -->
@@ -235,7 +235,7 @@
 <li><a href="#">Turnkey Assembly Line</a></li>
 <li><a href="#">Cell Testers</a></li>
 <li><a href="#">Sorting Machine</a></li>
-<li><a href="#">Welding machines</a></li>
+<li><a href="#">Welding Machines</a></li>
 </ul>
 </li>
 
