--- a/lithium-cell-manufacturing.html
+++ b/lithium-cell-manufacturing.html
@@ -223,7 +223,7 @@
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
-<a title="Homepage" href="./" class="text-white"><i class="ti ti-home"></i>Home</a>
+<a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
 <span class="ttm-bread-sep text-white">Consulting Services  </span>
