--- a/solar-pv-raw-materials.html
+++ b/solar-pv-raw-materials.html
@@ -371,7 +371,7 @@ worldwide supply chain network.</p>
 
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" style="">
+<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
@@ -405,7 +405,7 @@ worldwide supply chain network.</p>
 </div>
 <div class="col-lg-12">
 <div class="form-group">
-<input tabindex="3" class="form-control" type="text" name="mobile" id="mobileBottom" placeholder="Your Mobile Number*" onkeypress="return event.charCode >= 48 &amp;&amp; event.charCode <= 57 || event.charCode == 43 || event.charCode == 45 || event.charCode == 0" maxlength="15" minlength="10" required="">
+<input tabindex="3" class="form-control" type="text" name="mobile" id="mobileBottom" placeholder="Your Mobile Number*" onkeypress="return event.charCode >= 48 &amp &amp; event.charCode <= 57 || event.charCode == 43 || event.charCode == 45 || event.charCode == 0" maxlength="15" minlength="10" required="">
 </div>
 </div>
 <div class="col-lg-12">
