--- a/sitemap.html
+++ b/sitemap.html
@@ -346,7 +346,7 @@
 </div>
 <div class="form-group">
 <i class="fa fa-phone" aria-hidden="true"></i>
-<input type="text" name="mobile" class="form-control" onkeypress="return event.charCode >= 48 &amp;&amp; event.charCode <= 57 || event.charCode == 43 || event.charCode == 45 || event.charCode == 0" minlength="10" maxlength="15" placeholder="Your Phone Number*" required="">
+<input type="text" name="mobile" class="form-control" onkeypress="return event.charCode >= 48 &amp &amp; event.charCode <= 57 || event.charCode == 43 || event.charCode == 45 || event.charCode == 0" minlength="10" maxlength="15" placeholder="Your Phone Number*" required="">
 </div>
 <div class="form-group">
 <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -450,7 +450,7 @@
 </div>
 
 
-<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" style="">
+<img src="img/top.png" id="toTop" title="Go To Top" alt="Go To Top" >
 
 <a class="enquiry" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry">
 <i class="fa fa-envelope"></i>
@@ -484,7 +484,7 @@
 </div>
 <div class="col-lg-12">
 <div class="form-group">
-<input tabindex="3" class="form-control" type="text" name="mobile" id="mobileBottom" placeholder="Your Mobile Number*" onkeypress="return event.charCode >= 48 &amp;&amp; event.charCode <= 57 || event.charCode == 43 || event.charCode == 45 || event.charCode == 0" maxlength="15" minlength="10" required="">
+<input tabindex="3" class="form-control" type="text" name="mobile" id="mobileBottom" placeholder="Your Mobile Number*" onkeypress="return event.charCode >= 48 &amp &amp; event.charCode <= 57 || event.charCode == 43 || event.charCode == 45 || event.charCode == 0" maxlength="15" minlength="10" required="">
 </div>
 </div>
 <div class="col-lg-12">
