--- a/for-cylindrical-batteries.html
+++ b/for-cylindrical-batteries.html
@@ -181,7 +181,7 @@
 <li><a href="solar.html" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="#">Solar Panel Production Turnkey Line</a>
+<a href="solar-panel-production-turnkey-line.html">Solar Panel Production Turnkey Line</a>
 <ul>
 <li><a href="#">Turnkey Automation</a></li>
 <li><a href="#">Stringer</a></li>
@@ -197,7 +197,7 @@
 <a href="#">Solar Cell Production Line</a>
 </li>
 <li>
-<a href="#">Raw materials</a>
+<a href="raw-materials.html">Raw materials</a>
 <ul>
 <li><a href="#">Aluminum Frames</a></li>
 <li><a href="#">Solar Cells</a></li>
@@ -219,7 +219,7 @@
 <li><a href="lithium-batteries-1.html" title="Business Units">Lithium Batteries</a>
 <ul>
 <li>
-<a href="#">For Cylindrical Batteries</a>
+<a href="for-cylindrical-batteries.html">For Cylindrical Batteries</a>
 <ul>
 <li><a href="#">Turnkey Assembly Line</a></li>
 <li><a href="#">Cell Testers</a></li>
@@ -229,7 +229,7 @@
 </li>
 <!-- Two -->
 <li>
-<a href="#">For Prismatic Batteries</a>
+<a href="for-prismatic-batteries.html">For Prismatic Batteries</a>
 <ul>
 <li><a href="#">Turnkey Assembly Line</a></li>
 <li><a href="#">Cell Testers</a></li>
