--- a/index.html
+++ b/index.html
@@ -433,10 +433,10 @@ Your browser does not support the video tag.
 </section>
 <!-- Projects -->
 <section class="project-section-two style-two">
-<div class="auto-container">
+<div class="auto-container pl-5 pr-5">
 <div class="row no-gutters">
 <!-- Project Block -->
-<div class="project-block-four col-lg-4 col-md-6 col-sm-12">
+<div class="project-block-four col-lg-6 col-md-6 col-sm-12">
 <div class="set-img-this-box">
 <img src="img/unit-1.jpg" alt="Let the sun do the work" title="Let the sun do the work" class="w-100">
 </div>
@@ -461,7 +461,7 @@ Your browser does not support the video tag.
 </div>
 
 <!-- Project Block -->
-<div class="project-block-four col-lg-4 col-md-6 col-sm-12">
+<div class="project-block-four col-lg-6 col-md-6 col-sm-12">
 <div class="set-img-this-box">
 <img src="img/unit-2.jpg" alt="Future is Electric" title="Future is Electric" class="w-100">
 </div>
@@ -478,7 +478,6 @@ Your browser does not support the video tag.
 <li class="list-inline-item mb-3"><a href="#" title="Lithium Battery Pack Production Lines"> Lithium Battery Pack Production Lines</a></li>
 <li class="list-inline-item mb-3"><a href="#"> Lithium Battery Separator Production Lines</a></li>
 <li class="list-inline-item mb-3"><a href="#" title="Lithium Battery Raw Material Components"> Lithium Battery Raw Material Components</a></li>
-<li class="list-inline-item mb-3"><a href="#"> Electric Charging stations</a></li>
 </ul>
 </div>
 </div>
@@ -486,7 +485,7 @@ Your browser does not support the video tag.
 </div>
 </div>
 
-<!-- Project Block -->
+<!-- Project Block
 <div class="project-block-four col-lg-4 col-md-6 col-sm-12">
 <div class="set-img-this-box">
 <img src="img/unit-3.jpg" alt="Hydrogen is going to run the Planet" title="Hydrogen is going to run the Planet" class="w-100">
@@ -509,7 +508,9 @@ Your browser does not support the video tag.
 </div>
 </div>
 </div>
-</div>
+</div> 
+-->
+
 
 
 </div>
