--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ Your browser does not support the video tag.
 <!-- Project Block -->
 <div class="project-block-four col-lg-6 col-md-6 col-sm-12">
 <div class="set-img-this-box">
-<img src="img/unit-1.jpg" alt="Let the sun do the work" title="Let the sun do the work" class="w-100">
+<img src="img/unit-1.png" alt="Let the sun do the work" title="Let the sun do the work" class="w-100">
 </div>
 <div class="inner-box top-set">
 <span class="count">01</span>
@@ -463,7 +463,7 @@ Your browser does not support the video tag.
 <!-- Project Block -->
 <div class="project-block-four col-lg-6 col-md-6 col-sm-12">
 <div class="set-img-this-box">
-<img src="img/unit-2.jpg" alt="Future is Electric" title="Future is Electric" class="w-100">
+<img src="img/unit-2.png" alt="Future is Electric" title="Future is Electric" class="w-100">
 </div>
 <div class="inner-box top-set">
 <span class="count">02</span>
