--- a/about-us.html
+++ b/about-us.html
@@ -158,7 +158,7 @@
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>-->
-<li class="nav-item mr-0"><a href="#" title="Career" class="nav-link">Blogs  </a></li>
+
 <li class="nav-item mr-0"><a href="career.html" title="Career" class="nav-link">Career  </a></li>
 <li class="nav-item mr-0"><a href="contact-us.html" title="Contact Us" class="nav-link">Contact Us</a></li>
 </ul>                            
@@ -362,7 +362,7 @@
 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 team-content-side">
 <div class="bg-white p-3">
 <div class="team-imge">
-<img src="img/about-inrderjeet.jpg" alt="Inderjit Singh" title="Inderjit Singh">
+<img src="img/about-inrderjeet.png" alt="Inderjit Singh" title="Inderjit Singh">
 </div>
 
 <div class="team-content">
