--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>-->
-<li class="nav-item mr-0"><a href="#" title="Career" class="nav-link">Blogs  </a></li>
+
 <li class="nav-item mr-0"><a href="career.html" title="Career" class="nav-link">Career  </a></li>
 <li class="nav-item mr-0"><a href="contact-us.html" title="Contact Us" class="nav-link">Contact Us</a></li>
 </ul>                            
@@ -596,7 +596,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <img src="img/product-1.jpg" alt="Solar PV Laminator" title="Solar PV Laminator" class="w-100">
 <figcaption>
 <div class="imghvr1-content">      
-<h3 class="wt-title"><a href="#"> Solar PV Laminator </a></h3>
+<h3 class="wt-title"><a href="#">Universal Cut Cells MBB Tabber Stringer</a></h3>
 <p class="mb-3 d-block">Unique Innovative European Double side Electric heating Solar PV Laminator for GW factories</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div>
@@ -609,7 +609,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <img src="img/product-2.jpg" alt="Solar MBB Cells NDC Laser Cutter" title="Solar MBB Cells NDC Laser Cutter" class="w-100">
 <figcaption>
 <div class="imghvr1-content">      
-<h3 class="wt-title"><a href="#"> Solar MBB Cells <br> NDC Laser Cutter</a></h3>
+<h3 class="wt-title"><a href="#">Turnkey Solar PV Reliability Lab</a></h3>
 <p class="mb-3 d-block">High Speed High quality Top Brand MBB Solar Cells NDC Laser Cutter for GW Factories</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div>
@@ -622,7 +622,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <img src="img/product-3.jpg" alt="Solar EPC BOS Components" title="Solar EPC BOS Components">
 <figcaption>
 <div class="imghvr1-content">     
-<h3 class="wt-title"><a href="#">Solar EPC BOS Components</a></h3>
+<h3 class="wt-title"><a href="#">Automatic Laser welding for 3W & ESS Lithium Battery Packs</a></h3>
 <p class="mb-3 d-block">Quality Inverter,Modules, Cables, Connectors and other Solar EPC BOS ready stocks Available</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div> 
@@ -635,7 +635,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <img src="img/product-4.jpg" alt="Lithium Battery Pack Machines" title="Lithium Battery Pack Machines">
 <figcaption>
 <div class="imghvr1-content">     
-<h3 class="wt-title"><a href="#">Lithium Battery <br> Pack Machines</a></h3>
+<h3 class="wt-title"><a href="#">Battery Cell & Pack Testers</a></h3>
 <p class="mb-3 d-block">Turnkey Solution and Ready Stock Available for Lithium Battery Pack Assembly Machines</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div> 
@@ -648,7 +648,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <img src="img/product-5.jpg" alt="Lithium Cells and BMS" title="Lithium Cells and BMS">
 <figcaption>
 <div class="imghvr1-content">     
-<h3 class="wt-title"><a href="#">Lithium Cells and BMS</a></h3>
+<h3 class="wt-title"><a href="#"> BESS Container Assembly Line & Component Solutions</a></h3>
 <p class="mb-3 d-block">Ready stock and on order supply of High Quality Top Brands for Lithium Cylinderical, Pouch & Prismatic Cells and BMS</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div> 
@@ -661,7 +661,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <img src="img/product-6.jpg" alt="E Charging Stations" title="E Charging Stations">
 <figcaption>
 <div class="imghvr1-content">     
-<h3 class="wt-title"><a href="#">E Charging Stations </a></h3>
+<h3 class="wt-title"><a href="#">Cooling Systems for C&I and BESS Solutions </a></h3>
 <p class="mb-3 d-block">Ready and OEM Solutions for High Standard Universal Electric Vehicle Charging Stations of European Quality with International Certifications</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div> 
